--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
       <div class="hamburger-menu">
         <input type="checkbox" id="menu-btn-check">
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        <div class="menu-content">
+          <ul>
+              <li>
+                  <a href="#">HOME</a>
+              </li>
+              <li>
+                  <a href="#">NEWS</a>
+              </li>
+              <li>
+                  <a href="#">POST</a>
+              </li>
+          </ul>
+      </div>
       </div>
     </div>
     <div class="clear"></div>
