変数の定義

--- a/index.html
+++ b/index.html
@@ -38,10 +38,31 @@
         <div class="clear"></div>
     </header>
     <main class="main">
-        <section class="about">
+        <section class="apper">
+            <h3 class="">
         </section>
         <section class="logs">
             <ul class="logs_list">
+                <li class="logs_list_item">
+                    <div class="logs_image">
+                        <div class="logs_image_tag">
+                            <h3>竹内のお気に入りPic#01</h3>
+                            <p class="text">Snow Peak カフェでの一枚、アウトドアベンチ席でコーヒーと鬼浅焼きプリン</p>
+                            <p class="place">@Snow Peak hisaya-odori Park</p>
+                            <ul class="hashtag_list">
+                                <li class="hashtag_list_item">
+                                    <p>#カフェ</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#Snow Peak</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#いつかの名古屋帰省</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
                 <li class="logs_list_item">
                     <div class="logs_image">
                         <div class="logs_image_tag">
@@ -71,6 +92,9 @@
         <section　class="Message">
             </section>
     </main>
+
+
+
     <footer>
     </footer>
 </body>
