--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, target-densitydpi=medium-dpi">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TAKELOG</title>
+    <script src="https://kit.fontawesome.com/f76f25b302.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="/js/jquery-3.5.1.min.js"></script>
 </head>
@@ -42,9 +43,10 @@
             <h3 class="">
         </section>
         <section class="logs">
+            <h2></h2>
             <ul class="logs_list">
                 <li class="logs_list_item">
-                    <div class="logs_image">
+                    <div class="logs_image logs_image_01">
                         <div class="logs_image_tag">
                             <h3>竹内のお気に入りPic#01</h3>
                             <p class="text">Snow Peak カフェでの一枚、アウトドアベンチ席でコーヒーと鬼浅焼きプリン</p>
@@ -64,9 +66,9 @@
                     </div>
                 </li>
                 <li class="logs_list_item">
-                    <div class="logs_image">
+                    <div class="logs_image logs_image_02">
                         <div class="logs_image_tag">
-                            <h3>竹内のお気に入りPic#01</h3>
+                            <h3>竹内のサプライズ#02</h3>
                             <p class="text">Snow Peak カフェでの一枚、アウトドアベンチ席でコーヒーと鬼浅焼きプリン</p>
                             <p class="place">@Snow Peak hisaya-odori Park</p>
                             <ul class="hashtag_list">
