テキスト修正

--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
                 <li class="logs_list_item">
                     <div class="logs_image logs_image_02">
                         <div class="logs_image_tag">
-                            <h3>竹内のサプライズ#02</h3>
-                            <p class="text">Snow Peak カフェでの一枚、アウトドアベンチ席でコーヒーと鬼浅焼きプリン</p>
-                            <p class="place">@Snow Peak hisaya-odori Park</p>
+                            <h3>竹内の大成功サプライズ#02</h3>
+                            <p class="text">一年記念日。今日加さんサプライズありがとう〜、かっこよかった…</p>
+                            <p class="place">@金沢の牛タンのお店</p>
                             <ul class="hashtag_list">
                                 <li class="hashtag_list_item">
-                                    <p>#カフェ</p>
+                                    <p>#金沢旅行</p>
                                 </li>
                                 <li class="hashtag_list_item">
-                                    <p>#Snow Peak</p>
+                                    <p>#サプライズ</p>
                                 </li>
                                 <li class="hashtag_list_item">
-                                    <p>#いつかの名古屋帰省</p>
+                                    <p>#一年記念</p>
                                 </li>
                             </ul>
                         </div>
