メニュー画面デザイン変更

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <div class="menu-content">
                     <ul>
                         <li>
-                            <a href="#">HOME</a>
+                            <a href="#"><i class="fas fa-camera-retro menu_icon"></i>ALBUM</a>
                         </li>
                         <li>
-                            <a href="#">NEWS</a>
+                            <a href="#"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
                         </li>
                         <li>
-                            <a href="#">POST</a>
+                            <a href="#"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
                         </li>
                     </ul>
                 </div>
