imageファイルの追加

--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
                 <a href="logs.html"><i class="fas fa-camera-retro link_icon"></i>アルバムを見る</a>
             </div>
         </section>
+        <section class="event">
+            <img src="img/usj.jpeg" alt="USJ" width="100%" height="189.59px">
+            <img src="img/twoyears.jpg" alt="2年記念日" width="100%">
+            <img src="img/christmas.jpeg" alt="クリスマス" width="100%">
+        </section>
     </main>
 
 
