--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <li class="item">
                     <div class="item_tag">
                         <h3>#02 2年記念日</h3>
-                        <p class="text">もう2年になるね、遠距離頑張ってくれてありがとう。もうすぐ近くに行くね。</p>
+                        <p class="text">もう2年になるね、遠距離頑張ってくれてありがとう。もうすぐ近くに行くね〜。</p>
                         <p class="place">@愛知から東京へ</p>
                         <ul class="hashtag_list">
                             <li class="hashtag_list_item">
