--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <section class="event">
             <h2 class="section_title"><i class="fas fa-newspaper menu_icon"></i>これからのイベント
             </h2>
-            <ul class="item_list">
-                <li class="item">
-                    <div class="item_tag">
+            <ul class="event_list">
+                <li class="event_list_item">
+                    <div class="event_list_item_tag">
                         <h3>#01 USJ初上陸</h3>
                         <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
                         <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
@@ -137,8 +137,8 @@
                         </ul>
                     </div>
                 </li>
-                <li class="item">
-                    <div class="item_tag">
+                <li class="event_list_item">
+                    <div class="event_list_item_tag">
                         <h3>#02 2年記念日</h3>
                         <p class="text">もう2年になるね、遠距離頑張ってくれてありがとう。もうすぐ近くに行くね〜。</p>
                         <p class="place">@愛知から東京へ</p>
@@ -155,8 +155,8 @@
                         </ul>
                     </div>
                 </li>
-                <li class="item">
-                    <div class="item_tag">
+                <li class="event_list_item">
+                    <div class="event_list_item_tag">
                         <h3>#03 USJ初上陸</h3>
                         <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
                         <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
