index.html 構造を修正

--- a/index.html
+++ b/index.html
@@ -120,57 +120,63 @@
             </h2>
             <ul class="event_list">
                 <li class="event_list_item">
-                    <div class="event_list_item_tag">
-                        <h3>#01 USJ初上陸</h3>
-                        <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
-                        <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
-                        <ul class="hashtag_list">
-                            <li class="hashtag_list_item">
-                                <p>#ユニバ</p>
-                            </li>
-                            <li class="hashtag_list_item">
-                                <p>#初挑戦</p>
-                            </li>
-                            <li class="hashtag_list_item">
-                                <p>#二年記念旅行</p>
-                            </li>
-                        </ul>
+                    <div class="event_image">
+                        <div class="event_image_tag">
+                            <h3>#01 USJ初上陸</h3>
+                            <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
+                            <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
+                            <ul class="hashtag_list">
+                                <li class="hashtag_list_item">
+                                    <p>#ユニバ</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#初挑戦</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#二年記念旅行</p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
                 <li class="event_list_item">
-                    <div class="event_list_item_tag">
-                        <h3>#02 2年記念日</h3>
-                        <p class="text">もう2年になるね、遠距離頑張ってくれてありがとう。もうすぐ近くに行くね〜。</p>
-                        <p class="place">@愛知から東京へ</p>
-                        <ul class="hashtag_list">
-                            <li class="hashtag_list_item">
-                                <p>#2021/11/11</p>
-                            </li>
-                            <li class="hashtag_list_item">
-                                <p>#2年記念日</p>
-                            </li>
-                            <li class="hashtag_list_item">
-                                <p>#いつもありがとう</p>
-                            </li>
-                        </ul>
+                    <div class="event_image">
+                        <div class="event_image_tag">
+                            <h3>#02 2年記念日</h3>
+                            <p class="text">もう2年になるね、遠距離頑張ってくれてありがとう。もうすぐ近くに行くね〜。</p>
+                            <p class="place">@愛知から東京へ</p>
+                            <ul class="hashtag_list">
+                                <li class="hashtag_list_item">
+                                    <p>#2021/11/11</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#2年記念日</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#いつもありがとう</p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
                 <li class="event_list_item">
-                    <div class="event_list_item_tag">
-                        <h3>#03 USJ初上陸</h3>
-                        <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
-                        <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
-                        <ul class="hashtag_list">
-                            <li class="hashtag_list_item">
-                                <p>#ユニバ</p>
-                            </li>
-                            <li class="hashtag_list_item">
-                                <p>#初挑戦</p>
-                            </li>
-                            <li class="hashtag_list_item">
-                                <p>#二年記念旅行</p>
-                            </li>
-                        </ul>
+                    <div class="event_image">
+                        <div class="event_image_tag">
+                            <h3>#03 USJ初上陸</h3>
+                            <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
+                            <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
+                            <ul class="hashtag_list">
+                                <li class="hashtag_list_item">
+                                    <p>#ユニバ</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#初挑戦</p>
+                                </li>
+                                <li class="hashtag_list_item">
+                                    <p>#二年記念旅行</p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
             </ul>
