--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </h2>
             <ul class="event_list">
                 <li class="event_list_item">
-                    <div class="event_image">
+                    <div class="event_image event_image_01">
                         <div class="event_image_tag">
                             <h3>#01 USJ初上陸</h3>
                             <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
@@ -140,7 +140,7 @@
                     </div>
                 </li>
                 <li class="event_list_item">
-                    <div class="event_image">
+                    <div class="event_image event_image_02">
                         <div class="event_image_tag">
                             <h3>#02 2年記念日</h3>
                             <p class="text">もう2年になるね、遠距離頑張ってくれてありがとう。もうすぐ近くに行くね〜。</p>
@@ -160,7 +160,7 @@
                     </div>
                 </li>
                 <li class="event_list_item">
-                    <div class="event_image">
+                    <div class="event_image event_image_03">
                         <div class="event_image_tag">
                             <h3>#03 USJ初上陸</h3>
                             <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
