テキストを修正

--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@
                 <li class="event_list_item">
                     <div class="event_image event_image_03">
                         <div class="event_image_tag">
-                            <h3>#03 USJ初上陸</h3>
-                            <p class="text">今日加さん行きたいところリスト上位、遊園地。最初の遊園地はユニバです。</p>
-                            <p class="place">@ユニバーサル・スタジオ・ジャパン</p>
+                            <h3>#03 クリスマス</h3>
+                            <p class="text">クリスマス。クリスマス。クリスマス。クリスマス。クリスマス。</p>
+                            <p class="place">@クリスマス</p>
                             <ul class="hashtag_list">
                                 <li class="hashtag_list_item">
-                                    <p>#ユニバ</p>
+                                    <p>#クリスマス</p>
                                 </li>
                                 <li class="hashtag_list_item">
-                                    <p>#初挑戦</p>
+                                    <p>#クリスマス</p>
                                 </li>
                                 <li class="hashtag_list_item">
-                                    <p>#二年記念旅行</p>
+                                    <p>#クリスマス</p>
                                 </li>
                             </ul>
                         </div>
