テキストを修正

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </ul>
             <a href="logs.html">
                 <div class="link_button_news">
-                    <i class="fas fa-newspaper link_icon"></i>ニュースをみる
+                    <i class="fas fa-newspaper link_icon"></i>イベントをみる
                 </div>
             </a>
         </section>
