--- a/index.html
+++ b/index.html
@@ -163,17 +163,18 @@
                     <div class="event_image event_image_03">
                         <div class="event_image_tag">
                             <h3>#03 クリスマス</h3>
-                            <p class="text">クリスマス。クリスマス。クリスマス。クリスマス。クリスマス。</p>
-                            <p class="place">@クリスマス</p>
+                            <p class="text">今年のクリスマスは一緒にお祝い。去年は一緒に居れなくてごめんね。ケーキ食べよー！
+                            </p>
+                            <p class="place">@竹内ハウス？</p>
                             <ul class="hashtag_list">
                                 <li class="hashtag_list_item">
                                     <p>#クリスマス</p>
                                 </li>
                                 <li class="hashtag_list_item">
-                                    <p>#クリスマス</p>
+                                    <p>#東京でお祝い</p>
                                 </li>
                                 <li class="hashtag_list_item">
-                                    <p>#クリスマス</p>
+                                    <p>#夜ご飯</p>
                                 </li>
                             </ul>
                         </div>
