--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="menu-content">
                         <ul>
                             <li>
-                                <a href="#"><i class="fas fa-camera-retro menu_icon"></i>ALBUM</a>
+                                <a href="album.html"><i class="fas fa-camera-retro menu_icon"></i>ALBUM</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
@@ -43,7 +43,7 @@
             <section class="logs">
                 <ul class="logs_list">
                     <li class="logs_list_item">
-                        <a href="logs.html">
+                        <a href="album.html">
                             <div class="logs_image logs_image_01">
                                 <div class="logs_image_tag">
                                     <h3>#01 今日加のお気に入りPic</h3>
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li class="logs_list_item">
-                        <a href="logs.html">
+                        <a href="album.html">
                             <div class="logs_image logs_image_02">
                                 <div class="logs_image_tag">
                                     <h3>#02 今日加大成功サプライズ</h3>
@@ -109,7 +109,7 @@
                         </a>
                     </li>
                 </ul>
-                <a href="logs.html">
+                <a href="album.html">
                     <div class="link_button_album">
                         <i class="fas fa-camera-retro link_icon"></i>アルバムをみる
                     </div>
@@ -184,7 +184,7 @@
                 </ul>
                 <a href="logs.html">
                     <div class="link_button_news">
-                        <i class="fas fa-newspaper link_icon"></i>イベンをみる a
+                        <i class="fas fa-newspaper link_icon"></i>イベンをみる
                     </div>
                 </a>
             </section>
