fix: #288 テキスト修正

--- a/album.html
+++ b/album.html
@@ -105,18 +105,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_04">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#04 あじさいときょうかさん</h3>
+                                <p class="text">紫陽花の里での一枚。敏腕カメラマン山家によるベストショット。とにかく暑かった。</p>
+                                <p class="place">@紫陽花の里</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#紫陽花</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#カメラマン山家</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#モデル竹内</p>
                                     </li>
                                 </ul>
                             </div>
@@ -125,18 +125,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_05">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#05 水切り大会</h3>
+                                <p class="text">香嵐渓で水切りにハマる。きょうかさんは俺のスネに石を暴投。デッドボール。</p>
+                                <p class="place">@香嵐渓</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#紅葉</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#水切り</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#竹内センスなし</p>
                                     </li>
                                 </ul>
                             </div>
@@ -145,18 +145,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_06">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#06 着物着るだけ５千円</h3>
+                                <p class="text">鼻緒が切れたらいいことあるらしいけど、実際切れたらマジだるい。彼氏と着物を切るのが一つの夢らしい。</p>
+                                <p class="place">@花恋</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#金沢旅行</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#着物</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#布のレンタル</p>
                                     </li>
                                 </ul>
                             </div>
@@ -165,18 +165,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_07">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#07 謎アートの島</h3>
+                                <p class="text">海にはヤンキーが多い。とにかく暑かった。最後に行ったカフェよかったね。</p>
+                                <p class="place">@佐久島</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#謎アート</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#ヤンキーと海</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#カフェと猫</p>
                                     </li>
                                 </ul>
                             </div>
@@ -185,18 +185,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_08">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#08 ピクニック</h3>
+                                <p class="text">これからたくさん公園で遊びたい。バドミントンとドッジビーまたしよう。最近テント使ってない、使わねば。</p>
+                                <p class="place">@どっかの公園</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#テント</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#ギター</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#バドミントン</p>
                                     </li>
                                 </ul>
                             </div>
@@ -205,18 +205,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_09">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#09 芝生でごろごろ</h3>
+                                <p class="text">公園の芝生でごろごろ。外で食べるご飯は格別。多摩川にお弁当を持って行こ〜。</p>
+                                <p class="place">@久屋大通公園</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#ぽかぽか</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#ごろごろ</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#もぐもぐ</p>
                                     </li>
                                 </ul>
                             </div>
@@ -225,18 +225,18 @@
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_10">
                             <div class="logs_image_tag">
-                                <h3>#03 ガチトランポリン対決</h3>
-                                <p class="text">激アツトランポリン対決。体操部出身竹内選手が一歩リード。彼女を狙って全力でシュートをする山家選手。</p>
-                                <p class="place">@トランポリンハウス</p>
+                                <h3>#10 いつもありがとう</h3>
+                                <p class="text">遠距離がんばってくれてありがとう。今まで話したほとんど時間が電話だったね。これからは、電話がいらなくなるね！もう少しだけ待っててね。</p>
+                                <p class="place">@竹内</p>
                                 <ul class="hashtag_list">
                                     <li class="hashtag_list_item">
-                                        <p>#トランポリン</p>
+                                        <p>#ありがとう</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#ガチ対決</p>
+                                        <p>#お待たせ</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#一年記念</p>
+                                        <p>#大好きだよ</p>
                                     </li>
                                 </ul>
                             </div>
