--- a/album.html
+++ b/album.html
@@ -28,7 +28,7 @@
                                 <a href="album.html"><i class="fas fa-camera-retro menu_icon"></i>ALBUM</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
+                                <a href="event.html"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
@@ -41,6 +41,7 @@
         </header>
         <main class="main">
             <section class="logs">
+                <h2 class="section_title"><i class="fas fa-camera-retro menu_icon"></i>アルバム</h2>
                 <ul class="logs_list">
                     <li class="logs_list_item">
                         <div class="logs_image logs_image_01">
@@ -233,7 +234,7 @@
                                         <p>#ありがとう</p>
                                     </li>
                                     <li class="hashtag_list_item">
-                                        <p>#お待たせ</p>
+                                        <p>#お待たせしました</p>
                                     </li>
                                     <li class="hashtag_list_item">
                                         <p>#大好きだよ</p>
