--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <a href="album.html"><i class="fas fa-camera-retro menu_icon"></i>ALBUM</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
+                                <a href="event.html"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
@@ -182,9 +182,9 @@
                         </div>
                     </li>
                 </ul>
-                <a href="logs.html">
+                <a href="event.html">
                     <div class="link_button_news">
-                        <i class="fas fa-newspaper link_icon"></i>イベンをみる
+                        <i class="fas fa-newspaper link_icon"></i>イベントをみる
                     </div>
                 </a>
             </section>
