--- a/event.html
+++ b/event.html
@@ -31,7 +31,7 @@
                                 <a href="event.html"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
+                                <a href="post.html"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
                             </li>
                         </ul>
                     </div>
@@ -149,14 +149,14 @@
                     </li>
                 </ul>
             </section>
-            <a href="logs.html">
+            <a href="index.html">
                 <div class="link_button_top">
-                    <i class="fas fa-newspaper link_icon"></i>イベントをみる
+                    トップページ
                 </div>
             </a>
         </main>
         <footer class="footer">
-            <img class="footer_image" src="img/top03.png" alt="">
+            <img class="footer_image" src="img/kanazawa02.png" alt="">
             <p class="footer_text">(c) たけログ</p>
         </footer>
     </div>
