--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <a href="event.html"><i class="fas fa-newspaper menu_icon"></i>EVENTS</a>
                             </li>
                             <li>
-                                <a href="#"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
+                                <a href="post.html"><i class="fas fa-bullhorn menu_icon"></i>POSTS</a>
                             </li>
                         </ul>
                     </div>
@@ -195,22 +195,7 @@
                     <li class="post_list_item">
                         <div class="post_image post_image_01">
                             <h3 class="post_image_title">#01 <span class="post_image_title_orange">登山</span>しません？</h3>
-                            <!-- <div class="post_image_tag">
-                            <h3>#01 登山いこ？</h3>
-                            <p class="text">今日加さんと登山したい！頂上で作るインスタント飯は格別。絶景を見よう！</p>
-                            <p class="place">@何処かの山</p>
-                            <ul class="hashtag_list">
-                                <li class="hashtag_list_item">
-                                    <p>#登山に挑戦</p>
-                                </li>
-                                <li class="hashtag_list_item">
-                                    <p>#まずは初級から</p>
-                                </li>
-                                <li class="hashtag_list_item">
-                                    <p>#旅行ならぬ冒険</p>
-                                </li>
-                            </ul>
-                        </div> -->
+
                         </div>
                     </li>
                     <li class="post_list_item">
@@ -220,7 +205,7 @@
                     </li>
                 </ul>
 
-                <a href="logs.html">
+                <a href="post.html">
                     <div class="link_button_post">
                         <i class="fas fa-bullhorn link_icon"></i>募集をみる
                     </div>
